--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
       </div>
       <div class="destination__card">
-        <img src="assetS/Brujeria.png" alt="destination" />
+        <img src="assets/Brujeria.png" alt="destination" />
         <div class="card__content">
           <h4>Burjeria - Magia</h4>
           <p>
