--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <video autoplay loop muted plays-inline class="bg__video">
+  <video autoplay loop muted playsinline webkit-playsinline class="bg__video">
     <source src="assets/PortadaPrincipal.mp4" type="video/mp4" />
   </video>
   <nav id="nav" class="">
@@ -74,7 +74,7 @@
       <div class="destination__card">
         <img src="assets/Brujeria.png" alt="destination" />
         <div class="card__content">
-          <h4>Burjeria - Magia</h4>
+          <h4>Brujeria - Magia</h4>
           <p>
             Adéntrate en el fascinante mundo de la brujería con nuestros servicios especializados.
             Experimenta rituales auténticos y personalizados que honran la tradición ancestral, transformando tu
