se comenta el contador y se cambia el estilo de la descripcion de los productos

--- a/blog.html
+++ b/blog.html
@@ -148,7 +148,7 @@
 
             <div class="w3-bar w3-padding-16">
               <button class="like-btn" id="btn-like-3">Like</button>
-        <span class="like-counter" id="like-counter-3">0</span>
+         <!--<span class="like-counter" id="like-counter-3">0</span>-->
             </div>
 
 
@@ -203,7 +203,7 @@
 
             <div class="w3-bar w3-padding-16">
               <button class="like-btn" id="btn-like-2">Like</button>
-        <span class="like-counter" id="like-counter-2">0</span>
+        <!--<span class="like-counter" id="like-counter-2">0</span>-->
             </div>
 
           </div>
@@ -255,7 +255,7 @@
 
             <div class="w3-bar w3-padding-16">
               <button class="like-btn" id="btn-like-1">Like</button>
-              <span class="like-counter" id="like-counter-1">0</span>
+              <!--<span class="like-counter" id="like-counter-1">0</span>-->
             </div>
 
           </div>
